# containerd-shim-spin

./: CHANGELOG.md  Cargo.toml  Cross.dev.toml  Cross.toml  Makefile  README.md  release.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: action-build.yaml  action-check.yml  action-docker-build-push.yaml  action-node-installer.yaml  action-test.yml  release.yaml
conformance-tests/: Cargo.toml
containerd-shim-spin/: Cargo.toml  quickstart.md
containerd-shim-spin/src/: constants.rs  engine.rs  main.rs  source.rs  trigger.rs  utils.rs
cross/: Dockerfile  sccache.sh
deployments/k3d/: Dockerfile  README.md
deployments/kind/: Dockerfile  README.md
deployments/kind/workload/: workload.yaml
images/spin/: Cargo.toml  Dockerfile
images/spin-dapr/: Cargo.toml  README.md  deploy.yaml
images/spin-keyvalue/: Cargo.toml  Dockerfile
images/spin-mqtt-message-logger/: Cargo.toml  Dockerfile
images/spin-multi-trigger-app/: Dockerfile
images/spin-multi-trigger-app/spin-http-trigger/: Cargo.toml
images/spin-multi-trigger-app/spin-redis-trigger/: Cargo.toml  Dockerfile
images/spin-outbound-redis/: Cargo.toml  Dockerfile
images/spin_dotnet/: Dockerfile
node-installer/: Makefile
node-installer/script/: installer.sh
node-installer/tests/: integration-test-k3s.sh  integration-test-kind.sh  integration-test-microk8s.sh  integration-test-minikube.sh
scripts/: check-bins.sh  deploy-workloads.sh  run-integration-tests.sh  up.sh
tests/: Cargo.toml
tests/docker-integration-test/: Dockerfile.dind-containerd-spin-shim  docker-integration-test.sh
tests/src/: integration_test.rs
tests/workloads-pushed-using-docker-build-push/: workloads.yaml
tests/workloads-pushed-using-spin-registry-push/: workloads.yaml
tests/workloads-pushed-using-wkg-oci-push/: README.md  workloads.yaml
