[package]
name = "containerd-shim-spin-v2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { version = "1.0.0", default-features = false, features = ["opentelemetry"]}
log = "0.4"
spin-app = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
spin-componentize = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
# Enable loading components precompiled by the shim
spin-trigger = { git = "https://github.com/spinframework/spin", tag = "v3.6.1", features = [
    "unsafe-aot-compilation",
] }
spin-trigger-http = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
spin-trigger-redis = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
trigger-mqtt = { git = "https://github.com/spinframework/spin-trigger-mqtt", rev = "0437be00b991ac851ff1f95945df368cbfe79d9c" } # Spin 3.6.1 dependencies
trigger-sqs = { git = "https://github.com/spinframework/spin-trigger-sqs", rev = "76642c3620c7738c1751a01b580f5ac2f449a92c" } # Spin 3.6.1 dependencies
trigger-command = { git = "https://github.com/spinframework/spin-trigger-command", rev = "f7d7c97334176f973a89e90b99132ea64ada1987" } # Spin 3.6.1 dependencies
spin-loader = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
spin-oci = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
spin-telemetry = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
spin-factor-outbound-networking = { git = "https://github.com/spinframework/spin", tag = "v3.6.1" }
wasmtime = "41.0.0"
openssl = { version = "*", features = ["vendored"] }
anyhow = "1.0"
oci-spec = "0.7"
futures = "0.3"
ctrlc = { version = "3.5", features = ["termination"] }
url = "2.3"
serde_json = "1.0"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
wat = "1"
temp-env = "0.3.6"
toml = "0.9"
tempfile = "3"
tokio = { version = "1", features = ["rt", "fs"] }